---------------------------------------------------------------------------------------------------
Version: 0.3.18
Date: 0.0.2025
  Changes:
    - Moved disabel function: Filter, Recipe, Tech. To chemical mod.  
---------------------------------------------------------------------------------------------------
Version: 0.3.17
Date: 04.03.2025
  Features:
    - Reapatable migrations.
    - Added all the old chat popups to tips & tricks. some teext changes may happen as the mods updates.  
  Changes:
    - Achivement name change [Surviving planet destruction] --> [Leviathan]
    - Control stage code are deleted, no longer in use/needed.
    - Deleted setting(s) regarding the old chat popup.
    - Bobs & [space-age] bridge is moved to Alt Chemical Processing. 
    - If you are currently playing Bobs and PA&R please use that mod to restore the merge of items in recipes.
    - Items in the bridge are as fllowes: ["bob-carbon"] = "carbon". ["bob-tungsten-plate"] = "tungsten-plate". ["bob-tungsten-carbide"] = "tungsten-carbide". ["bob-lithium"] = "lithium-plate". ["seedling"] = "tree-seed". ["bob-salt"] = "salt", from "SaltedFish" if mods["SaltedFish"].
  Bugfixes:
    - Mistakenly disabled turbo loaders from Vanilla Loader should only happen if using boblogistics.
  Info:
    - [space-age] Heavily recommend using "reverse-factory" For more info read mod page.
    - The unification code was moved over to my Alt Chemical Processing mod.
---------------------------------------------------------------------------------------------------
Version: 0.3.16
Date: 05.02.2025
  Changes:
    - Another "bob-" prefix.
  Features:
    - Preparing Compatibility for Milestones mod.
    - Preparing to move Ingame info message to tips & tricks.
  Bugfixes:
    - Crash without Aged Bobs.
    - Crash with Armour MK3 mod.
  Modding:
    - Updated Spidertron Extended compatibility.
    - Crash Aged Bobs.
    - Crash Armour MK3 mod.