@@ -2,7 +2,10 @@
 Version: 0.3.18
 Date: 0.0.2025
   Changes:
-    - Moved disabel function: Filter, Recipe, Tech. To chemical mod.  
+    - Moved disabel function: Filter, Recipe, Tech. To chemical mod.
+  Modding:
+    - Fixed missing item in roboport recipe (boblogiostics)
+    - Added item to armour recipes (bobplate, bobenemies)
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.17
 Date: 04.03.2025
